--- a/app/styles/components/_navigation.scss
+++ b/app/styles/components/_navigation.scss
@@ -9,4 +9,12 @@
   .menu > .menu-text > a {
     display: inline;
   }
+
+  .active-link {
+    font-weight: bold;
+  }
+}
+
+.top-bar .active-link {
+  font-weight: bold;
 }
